unpackaged/main/default/objects/Account/fields/Opportunity_Count_with_Canceled_Billing__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count_with_Canceled_Billing__c</fullName>
    <label>Opportunities with Canceled Billing</label>
    <summaryFilterItems>
        <field>Opportunity.billing_status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>