unpackaged/main/default/objects/Account/fields/opportunity_mrr__c.field-meta.xml
<CustomField>
    <fullName>opportunity_mrr__c</fullName>
    <label>MRR from Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>