unpackaged/main/default/objects/Account/fields/organization__c.field-meta.xml
<CustomField>
    <fullName>organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Profile</label>
    <referenceTo>organization__c</referenceTo>
    <relationshipLabel>Accounts from this Organization</relationshipLabel>
    <relationshipName>Account_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>