unpackaged/main/default/objects/Account/fields/Organization_Structure__c.field-meta.xml
<CustomField>
    <fullName>Organization_Structure__c</fullName>
    <description>Organization&#39;s Buying Autonomy</description>
    <inlineHelpText>Organization&#39;s Buying Autonomy</inlineHelpText>
    <label>Organization Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centralized</fullName>
            </value>
            <value>
                <fullName>Decentralized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>