unpackaged/main/default/objects/Account/fields/organization_type__c.field-meta.xml
<CustomField>
    <fullName>organization_type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>organization_types</valueSetName>
    </valueSet>
</CustomField>