unpackaged/main/default/objects/Account/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Text of Account Owner to add to Partner Account quick action</description>
    <formula>Owner.Full_Name__c</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>