unpackaged/main/default/objects/Account/fields/PandaDoc_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>PandaDoc_Billing_Street__c</fullName>
    <formula>IF(NOT(ISBLANK(Billing_Street_Line_2__c)),  BillingStreet&amp;&quot;, &quot;&amp;Billing_Street_Line_2__c, BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PandaDoc Billing Street</label>
    <type>Text</type>
</CustomField>