unpackaged/main/default/objects/Account/fields/ParentAccountCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountCaseSafeID__c</fullName>
    <formula>CASESAFEID( Parent.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAccountCaseSafeID</label>
    <type>Text</type>
</CustomField>