unpackaged/main/default/objects/Account/fields/Partner_Acquisition_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Acquisition_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the PAM associated with the Account, usually the individual who managed the Partnership Opportunity record.</description>
    <inlineHelpText>This is the PAM associated with the Account, usually the individual who managed the Partnership Opportunity record.</inlineHelpText>
    <label>Partner Acquisition Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>