unpackaged/main/default/objects/Account/fields/Partner_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Partner_Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Influencer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Influencers</relationshipLabel>
    <relationshipName>Partner_Influencer</relationshipName>
    <type>Lookup</type>
</CustomField>