unpackaged/main/default/objects/Account/fields/Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Level__c</fullName>
    <label>Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <isActive>false</isActive>
                <label>Advanced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>