unpackaged/main/default/objects/Account/fields/partner_network_size_dental__c.field-meta.xml
<CustomField>
    <fullName>partner_network_size_dental__c</fullName>
    <inlineHelpText>Number of dental practices the partner has access to</inlineHelpText>
    <label>Partner Network Size - Dental</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>