unpackaged/main/default/objects/Account/fields/partner_network_size_medical__c.field-meta.xml
<CustomField>
    <fullName>partner_network_size_medical__c</fullName>
    <inlineHelpText>Estimated number of medical practices the partner has access to</inlineHelpText>
    <label>Partner Network Size - Medical</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>