unpackaged/main/default/objects/Account/fields/partner_practices_sold_count__c.field-meta.xml
<CustomField>
    <fullName>partner_practices_sold_count__c</fullName>
    <inlineHelpText>Number of practices submitted by partner that have bought</inlineHelpText>
    <label>Partner Practices Sold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>