unpackaged/main/default/objects/Account/fields/partner_practices_submitted_count__c.field-meta.xml
<CustomField>
    <fullName>partner_practices_submitted_count__c</fullName>
    <inlineHelpText>Number of leads submitted by the Partner (Reseller + Referral)</inlineHelpText>
    <label>Partner Practices Submitted</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>