unpackaged/main/default/objects/Account/fields/Partner_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Partner_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Approved Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>