unpackaged/main/default/objects/Account/fields/Partner_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the PSM associated with the Account.</description>
    <inlineHelpText>This is the PSM associated with the Account.</inlineHelpText>
    <label>Partner Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>