unpackaged/main/default/objects/Account/fields/Partner_Total_Number_of_Shared_Deals__c.field-meta.xml
<CustomField>
    <fullName>Partner_Total_Number_of_Shared_Deals__c</fullName>
    <description>Counts the number of Leads referred by this account.</description>
    <label>Partner: Total Open Shared Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>