unpackaged/main/default/objects/Account/fields/Pendo_Appointments_Booked_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Appointments_Booked_Last_30_Days__c</fullName>
    <description>This data is synced from the SFDC Account Push in Pendo. This field is the Event Count for Total Appointments Booked in the last 30 days.</description>
    <label>Appointments Booked (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>