unpackaged/main/default/objects/Account/fields/pendo_Average_NPS__c.field-meta.xml
<CustomField>
    <fullName>pendo_Average_NPS__c</fullName>
    <label>Pendo_Average_NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>