unpackaged/main/default/objects/Account/fields/Pendo_Time_on_Site_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Time_on_Site_Minutes__c</fullName>
    <description>This data is configured in the &quot;SFDC Account Push&quot; report and pushes the Time on Site (minutes) field for the Last 30 Days.</description>
    <inlineHelpText>Time on site in last 30 days by Staff users.</inlineHelpText>
    <label>Time on Site (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>