unpackaged/main/default/objects/Account/fields/Pendo_Tracked_Events_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Tracked_Events_Last_30_Days__c</fullName>
    <description>This data is pushed from the SFDC Account Push report and reflects the number of tracked events recorded on this account in the last 30 days. It is an overall representation of how many actions the account is taking inside of the product.</description>
    <label>Tracked Events Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>