unpackaged/main/default/objects/Account/fields/Pendo_Usage_Trend_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Usage_Trend_Percent__c</fullName>
    <description>This data is pushed from Pendo via the SFDC Account Push report. This field is calculated by Pendo and reflects the overall trend in account usage in the last 30 days.</description>
    <label>Usage Trend Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>