unpackaged/main/default/objects/Account/fields/Permanently_Closed__c.field-meta.xml
<CustomField>
    <fullName>Permanently_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether a location is permanently closed.</description>
    <inlineHelpText>Is this location permanently closed?</inlineHelpText>
    <label>Permanently Closed?</label>
    <type>Checkbox</type>
</CustomField>