unpackaged/main/default/objects/Account/fields/practice_management_software__c.field-meta.xml
<CustomField>
    <fullName>practice_management_software__c</fullName>
    <inlineHelpText>What&#39;s used to manage the practice?</inlineHelpText>
    <label>Practice Management System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practice_Management_Systems</valueSetName>
    </valueSet>
</CustomField>