unpackaged/main/default/objects/Account/fields/practice_management_system_other__c.field-meta.xml
<CustomField>
    <fullName>practice_management_system_other__c</fullName>
    <label>PM System Name (Other)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>