unpackaged/main/default/objects/Account/fields/Primary_Practice_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice_Specialty__c</fullName>
    <inlineHelpText>What is the primary specialty of the practice?</inlineHelpText>
    <label>Primary Practice Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>specialties</valueSetName>
    </valueSet>
</CustomField>