unpackaged/main/default/objects/Account/fields/Product_Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue_Model__c</fullName>
    <label>Product Revenue Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription - Per Provider</fullName>
            </value>
            <value>
                <fullName>Subscription - Per Location</fullName>
            </value>
            <value>
                <fullName>Subscription - Flat Fee</fullName>
            </value>
            <value>
                <fullName>One-Time Purchase</fullName>
            </value>
            <value>
                <fullName>Free - Advertised</fullName>
            </value>
            <value>
                <fullName>Free - Transaction Fee</fullName>
            </value>
            <value>
                <fullName>Free - Referral/Shared Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>