unpackaged/main/default/objects/Account/fields/Product_Revenue_Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue_Model_Description__c</fullName>
    <label>Product Revenue Model Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>