unpackaged/main/default/objects/Account/fields/Product_Usage_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Dashboard__c</fullName>
    <description>Metabase link</description>
    <formula>IF(
ISBLANK(nexhealth_institution_id__c),
&quot;&quot;,
&quot;https://metabase.k8s.production.int.nexhealth.cloud/dashboard/15-customer-instance-product-usage?institution_id=&quot; + nexhealth_institution_id__c
)</formula>
    <label>Product Usage Dashboard</label>
    <type>Text</type>
</CustomField>