unpackaged/main/default/objects/Account/fields/QA_Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>QA_Created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Created from Lead</label>
    <type>Checkbox</type>
</CustomField>