unpackaged/main/default/objects/Account/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Referral Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>