unpackaged/main/default/objects/Account/fields/referral_date__c.field-meta.xml
<CustomField>
    <fullName>referral_date__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>