unpackaged/main/default/objects/Account/fields/Referral_Partner_Days__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Days__c</fullName>
    <formula>IF( NOT( ISBLANK( Referral_Partnership_Churned_At__c ) &amp;&amp;  ISBLANK( Became_a_Referral_Partner_Date__c)) ,Referral_Partnership_Churned_At__c  -  Became_a_Referral_Partner_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partner Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>