unpackaged/main/default/objects/Account/fields/Referral_Partnership_Churned_At__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partnership_Churned_At__c</fullName>
    <label>Referral Partnership Churned At</label>
    <type>DateTime</type>
</CustomField>