unpackaged/main/default/objects/Account/fields/referral_source__c.field-meta.xml
<CustomField>
    <fullName>referral_source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Accounts)</relationshipLabel>
    <relationshipName>referred_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>