unpackaged/main/default/objects/Account/fields/referral_source_rep_email__c.field-meta.xml
<CustomField>
    <fullName>referral_source_rep_email__c</fullName>
    <label>Referral Rep Email</label>
    <type>Email</type>
</CustomField>