unpackaged/main/default/objects/Account/fields/referral_source_rep_name__c.field-meta.xml
<CustomField>
    <fullName>referral_source_rep_name__c</fullName>
    <label>Referral Rep Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>