unpackaged/main/default/objects/Account/fields/Reseller_Contraction_Amount_locations__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contraction_Amount_locations__c</fullName>
    <label>Reseller Contraction Amount (locations)</label>
    <type>DateTime</type>
</CustomField>