unpackaged/main/default/objects/Account/fields/Reseller_Customer__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Customer</label>
    <type>Checkbox</type>
</CustomField>