unpackaged/main/default/objects/Account/fields/Reseller_Partner__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Partner</label>
    <type>Checkbox</type>
</CustomField>