unpackaged/main/default/objects/Account/fields/Reseller_Partner_Days__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Partner_Days__c</fullName>
    <formula>IF( NOT(ISBLANK( Referral_Partnership_Churned_At__c )) &amp;&amp; NOT(ISBLANK(  Became_a_Reseller_Partner_Date__c)) ,Referral_Partnership_Churned_At__c - Became_a_Reseller_Partner_Date__c, IF(NOT(ISBLANK( First_Reseller_Contraction_At__c )), Now() - First_Reseller_Contraction_At__c , null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Partner Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>