unpackaged/main/default/objects/Account/fields/Reseller_Partnership_Churned_At__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Partnership_Churned_At__c</fullName>
    <label>Reseller Partnership Churned At</label>
    <type>DateTime</type>
</CustomField>