unpackaged/main/default/objects/Account/fields/Retool_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Retool_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Retool User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>