unpackaged/main/default/objects/Account/fields/Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>Risk_Details__c</fullName>
    <label>Risk Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>