unpackaged/main/default/objects/Account/fields/SaaS_Cancelled_At__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Cancelled_At__c</fullName>
    <label>SaaS Cancelled At</label>
    <type>DateTime</type>
</CustomField>