unpackaged/main/default/objects/Account/fields/SaaS_Churn_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Churn_Request_Count__c</fullName>
    <label>SaaS Churn Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>