unpackaged/main/default/objects/Account/fields/SaaS_Churn_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Churn_Requested_At__c</fullName>
    <label>SaaS Churn Requested At</label>
    <type>DateTime</type>
</CustomField>