unpackaged/main/default/objects/Account/fields/SaaS_Contraction_Amount_licenses__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Contraction_Amount_licenses__c</fullName>
    <label>SaaS Contraction Amount (licenses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>