unpackaged/main/default/objects/Account/fields/SaaS_Customer_Days__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Customer_Days__c</fullName>
    <formula>IF(
ISBLANK(Became_a_Customer_Date__c),0,
IF(ISBLANK(Churned_Customer_Date__c), NOW() - Became_a_Customer_Date__c,
Churned_Customer_Date__c - Became_a_Customer_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SaaS Customer Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>