unpackaged/main/default/objects/Account/fields/SaaS_Location_Churned__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Location_Churned__c</fullName>
    <label>SaaS Location Churned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>