unpackaged/main/default/objects/Account/fields/SaaS_Locations_Active__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Locations_Active__c</fullName>
    <formula>SaaS_Locations_Sold__c -  SaaS_Location_Churned__c</formula>
    <label>SaaS Locations Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>