unpackaged/main/default/objects/Account/fields/SaaS_Locations_Sold__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Locations_Sold__c</fullName>
    <label>SaaS Locations Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>