unpackaged/main/default/objects/Account/fields/Saas_Market_Classification__c.field-meta.xml
<CustomField>
    <fullName>Saas_Market_Classification__c</fullName>
    <description>Accounts based on their characteristics will be manually assigned the dedicated values after reviews or when accounts are created to assist internal teams prioritizing and tracking accounts performance.</description>
    <inlineHelpText>TAM - (Total Addressable Market) 
SAM - (Service Addressable Market)
SOM - (Service Obtainable Market)</inlineHelpText>
    <label>Saas Market Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Saas_Market_Classification</valueSetName>
    </valueSet>
</CustomField>