unpackaged/main/default/objects/Account/fields/SaaS_Onboarding_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Onboarding_Completed_At__c</fullName>
    <description>Stamps when the first related TaskRay Project is marked Closed - Complete</description>
    <label>SaaS Onboarding Completed At</label>
    <type>DateTime</type>
</CustomField>