unpackaged/main/default/objects/Account/fields/Sales_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activity_Count__c</fullName>
    <formula>Sales_Activity_Count_Email__c  +   Sales_Activity_Count_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>