unpackaged/main/default/objects/Account/fields/Sales_Activity_Count_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activity_Count_Email__c</fullName>
    <description>Number of email Sales Activities related to the Account, its Contacts, or its Opps, that meet required criteria. Filled in by a flow.</description>
    <label>Sales Activity Count - Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>