unpackaged/main/default/objects/Account/fields/Sales_Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Step_Date__c</fullName>
    <description>Date of next event as indicated by Sales Team</description>
    <inlineHelpText>Date of next event as indicated by Sales Team</inlineHelpText>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>