unpackaged/main/default/objects/Account/fields/Sales_Next_Step_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Step_Notes__c</fullName>
    <description>Notes on upcoming sales event</description>
    <inlineHelpText>Notes on upcoming sales event</inlineHelpText>
    <label>Next Step Notes</label>
    <type>TextArea</type>
</CustomField>