unpackaged/main/default/objects/Account/fields/Sales_Next_Step_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Step_Updated_At__c</fullName>
    <description>Last time the Next Step Date or Next Step Notes fields were updated</description>
    <inlineHelpText>Last time the Next Step Date or Next Step Notes fields were updated</inlineHelpText>
    <label>Next Step Updated At</label>
    <type>DateTime</type>
</CustomField>