unpackaged/main/default/objects/Account/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR assigned to work the account</description>
    <inlineHelpText>SDR assigned to work the account</inlineHelpText>
    <label>SDR Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Sales Development</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Owned_As_SDR</relationshipName>
    <type>Lookup</type>
</CustomField>