unpackaged/main/default/objects/Account/fields/Second_Appointment_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Appointment_Booked_Date__c</fullName>
    <description>This field is populated when Pendo_Appointments_Booked_Last_30_Days__c moves to 2 for the first time. It is used in onboarding metrics to see time to first booking.</description>
    <inlineHelpText>This field is populated when Pendo_Appointments_Booked_Last_30_Days__c moves to 2 for the first time. It is used in onboarding metrics to see time to first booking.</inlineHelpText>
    <label>Second Appointment Booked Date</label>
    <type>Date</type>
</CustomField>