unpackaged/main/default/objects/Account/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <inlineHelpText>Indicates current stage of the account&#39;s relationship with NexHealth</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>account_health</valueSetName>
    </valueSet>
</CustomField>