unpackaged/main/default/objects/Account/fields/Status_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_At__c</fullName>
    <description>Date the status was last updated</description>
    <inlineHelpText>Date the status was last updated</inlineHelpText>
    <label>Status Changed At</label>
    <type>Date</type>
</CustomField>