unpackaged/main/default/objects/Account/fields/Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By__c</fullName>
    <description>User who updated the Account Status. &#39;System&#39; indicates the change was made automatically.</description>
    <inlineHelpText>User who updated the Account Status. &#39;System&#39; indicates the change was made automatically.</inlineHelpText>
    <label>Status Changed By</label>
    <length>128</length>
    <type>Text</type>
</CustomField>