unpackaged/main/default/objects/Account/fields/Status_Changed_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By_Role__c</fullName>
    <description>Role of the user who updated Status.</description>
    <inlineHelpText>Role of the user who updated Status</inlineHelpText>
    <label>Status Changed By Role</label>
    <length>128</length>
    <type>Text</type>
</CustomField>