unpackaged/main/default/objects/Account/fields/Status_Prior_to_Churning__c.field-meta.xml
<CustomField>
    <fullName>Status_Prior_to_Churning__c</fullName>
    <description>Captures the prior value of the Status field when Status changes to Churning via a flow, in order to set it back to that value if Churn Case is resolved as Closed - Saved.</description>
    <label>Status Prior to Churning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>