unpackaged/main/default/objects/Account/fields/Sync_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Product</label>
    <type>Checkbox</type>
</CustomField>