unpackaged/main/default/objects/Account/fields/Synced_from_Impartner__c.field-meta.xml
<CustomField>
    <fullName>Synced_from_Impartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to TRUE if this Account was created from Impartner. This is used for deduplication and manual review purposes.</description>
    <label>Synced from Impartner</label>
    <type>Checkbox</type>
</CustomField>