unpackaged/main/default/objects/Account/fields/Synced_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Synced_Subdomain__c</fullName>
    <description>Product-stored subdomain for this account</description>
    <label>Synced Subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>