unpackaged/main/default/objects/Account/fields/Total_API_Contractions__c.field-meta.xml
<CustomField>
    <fullName>Total_API_Contractions__c</fullName>
    <label>Total API Contractions</label>
    <type>DateTime</type>
</CustomField>